--- a/uni_modules/ucs-css/index.scss
+++ b/uni_modules/ucs-css/index.scss
@@ -17,6 +17,7 @@
 @import "./scss/font-style.scss";
 @import "./scss/font-weight.scss";
 @import "./scss/height.scss";
+@import "./scss/inset.scss";
 @import "./scss/justify-content.scss";
 @import "./scss/letter-spacing.scss";
 @import "./scss/line-height.scss";
