--- a/uni_modules/ucs-css/scss/letter-spacing.scss
+++ b/uni_modules/ucs-css/scss/letter-spacing.scss
@@ -1,23 +1,63 @@
-.tracking-tighter {
-	letter-spacing: -0.8px;
+.spacing--10 {
+	letter-spacing: -10px;
 }
-
-.tracking-tight {
-	letter-spacing: -0.4px;
+.spacing--9 {
+	letter-spacing: -9px;
 }
-
-.tracking-normal {
+.spacing--8 {
+	letter-spacing: -8px;
+}
+.spacing--7 {
+	letter-spacing: -7px;
+}
+.spacing--6 {
+	letter-spacing: -6px;
+}
+.spacing--5 {
+	letter-spacing: -5px;
+}
+.spacing--4 {
+	letter-spacing: -4px;
+}
+.spacing--3 {
+	letter-spacing: -3px;
+}
+.spacing--2 {
+	letter-spacing: -2px;
+}
+.spacing--1 {
+	letter-spacing: -1px;
+}
+.spacing-0 {
 	letter-spacing: 0;
 }
-
-.tracking-wide {
-	letter-spacing: 0.4px;
+.spacing-1 {
+	letter-spacing: 1px;
 }
-
-.tracking-wider {
-	letter-spacing: 0.8px;
+.spacing-2 {
+	letter-spacing: 2px;
 }
-
-.tracking-widest {
-	letter-spacing: 1.6px;
+.spacing-3 {
+	letter-spacing: 3px;
+}
+.spacing-4 {
+	letter-spacing: 4px;
+}
+.spacing-5 {
+	letter-spacing: 5px;
+}
+.spacing-6 {
+	letter-spacing: 6px;
+}
+.spacing-7 {
+	letter-spacing: 7px;
+}
+.spacing-8 {
+	letter-spacing: 8px;
+}
+.spacing-9 {
+	letter-spacing: 9px;
+}
+.spacing-10 {
+	letter-spacing: 10px;
 }
