--- a/uni_modules/ucs-css/colors/element-ui.scss
+++ b/uni_modules/ucs-css/colors/element-ui.scss
@@ -1,3 +1,32 @@
+/**
+ * element plus 色彩模式
+ * @param mode = [dark|light] 暗黑模式
+ * @param color 主色，Hex值
+ * @param weight 色彩权重，1~10
+ * @returns string 色彩
+ */
+// const elementPlusColor = (mode : string, color : string, weight : number) : string => {
+// 	const white : string = "#ffffff";
+// 	const black : string = "#141414";
+// 	const currentColor : string = mode === "dark" ? black : white;
+// 	const w : number = Math.max(Math.min(weight / 10, 1), 0);
+// 	const r1 : number = parseInt(currentColor.substring(1, 3), 16);
+// 	const g1 : number = parseInt(currentColor.substring(3, 5), 16);
+// 	const b1 : number = parseInt(currentColor.substring(5, 7), 16);
+// 	const r2 : number = parseInt(color.substring(1, 3), 16);
+// 	const g2 : number = parseInt(color.substring(3, 5), 16);
+// 	const b2 : number = parseInt(color.substring(5, 7), 16);
+// 	const r : number = Math.round(r1 * (1 - w) + r2 * w);
+// 	const g : number = Math.round(g1 * (1 - w) + g2 * w);
+// 	const b : number = Math.round(b1 * (1 - w) + b2 * w);
+
+// 	const rgbToHex = (value : number) : string => {
+// 		return value.toString(16).padStart(2, '0');
+// 	};
+
+// 	return '#' + rgbToHex(r) + rgbToHex(g) + rgbToHex(b);
+// }
+
 $--color-primary: #409EFF !default;
 $--color-white:#ffffff;
 $--color-black:#141414;
