--- a/uni_modules/ucs-css/index.scss
+++ b/uni_modules/ucs-css/index.scss
@@ -1,4 +1,3 @@
-@import "./colors/index.scss";
 @import "./scss/border-width.scss";
 @import "./scss/border-style.scss";
 @import "./scss/justify-content.scss";
@@ -31,3 +30,8 @@
 @import "./scss/white-space.scss";
 @import "./scss/width.scss";
 @import "./scss/z-index.scss";
+
+/**
+ * 色彩文件
+ * @import "./colors/index.scss";
+ */
