--- a/uni_modules/ucs-css/scss/inset.scss
+++ b/uni_modules/ucs-css/scss/inset.scss
@@ -17,6 +17,6 @@
 /**
  * 优化部分
  */
-.inset-0{left: 0;right: 0;top: 0;bottom: 0;}
-.inset-x-0{left: 0;right: 0;}
-.inset-y-0{top: 0;bottom: 0;}
+.inset{left: 0;right: 0;top: 0;bottom: 0;}
+.inset-x{left: 0;right: 0;}
+.inset-y{top: 0;bottom: 0;}
