请求库、配置库更新

--- a/uni_modules/ucs-css/colors/index.scss
+++ b/uni_modules/ucs-css/colors/index.scss
@@ -6,6 +6,7 @@
 @import "./warning/index.scss";
 @import "./danger/index.scss";
 @import "./grey/index.scss";
+@import "./gray/index.scss";
 /**
  * 其它色彩
  */
